# DL_cuDNN_2022-1

./: README.md  index.html  index.md
code/cudnn_samples_v8/RNN_v8.0/: MSBUILD.py  MSBUILD_UTIL.bat  rnnCUDNN_vs2010.sln  rnnCUDNN_vs2010.vcxproj
code/cudnn_samples_v8/conv_sample/: conv_sample.cpp
code/simple_conv_cudnn_v8/: CMakeLists.txt  conv.cu
docs/: index.html  index.md
exams/: 1er_práctico.md
